<resources>
    <string name="app_name">iBarangay</string>
    <string name="login"> Login </string>
    <string name="signup"> Sign Up</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="username"> Username </string>
    <string name="password"> Password </string>
    <string name="fname"> First Name </string>
    <string name="mname"> Middle Name </string>
    <string name="lname"> Last Name </string>
    <string name="sname"> Suffix Name </string>
    <string name="email"> Email </string>

    <string name="menu_Open">Open</string>
    <string name="menu_Close">Close</string>
    <string name="title_activity_announcement">Announcement</string>
    <string name="title_activity_request">Request</string>
    <string name="title_activity_service">Service</string>

    <string name="tab_text_1">All</string>
    <string name="tab_text_2">Pending</string>
    <string name="tab_text_3">Approved</string>
    <string name="tab_text_4">Disapproved</string>

    <string name="extended_fab_content_desc">Tab 3</string>
    <string name="extended_fab_label">Request</string>
    <string name="title_activity_main">MainActivity</string>
</resources>