<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Login"
    android:background="@color/navy3">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_gravity="start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="Login"
            android:textColor="@color/black"
            android:textSize="50dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="Welcome to iBarangay App."
            android:textColor="@color/poorblack"
            android:textSize="20dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/username"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/navy3"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/navy3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ETusername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/navy2" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColorHint="@color/navy3"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/navy3"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ETpassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/navy2"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnlogin"
        android:layout_marginTop="30dp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/login"
        app:cornerRadius="23dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnsignup"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/signup"
        app:cornerRadius="23dp"/>

</LinearLayout>