<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top|center_horizontal"
        android:background="@color/navy3">

        <TextView
            android:id="@+id/lblBack2"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="BACK"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textSize="20dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:backgroundTint="@color/navy3"
            android:elevation="0dp"
            app:cardCornerRadius="100dp">

            <ImageView
                android:id="@+id/img_Profile2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_avatar"
                tools:srcCompat="@drawable/img_avatar" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Please select an image."
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:text="Personal Information"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayout1S2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/fname"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/navy3"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/navy3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/S2Fname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/navy2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayout2S2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:hint="@string/mname"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/navy3"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/navy3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/S2Mname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/navy2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayout3S2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:hint="@string/lname"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/navy3"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/navy3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/S2Lname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/navy2" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/invic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:text="*You can leave this field blank."
                android:textSize="10dp"
                android:textColor="@color/red"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayout4S2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/sname"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/navy3"
                textInputLayout.isHelperTextEnabled="true"
                textInputLayout.error="Email can not be Empty!!!"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/navy3">



                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/S2Sname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/navy2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout1S2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                android:hint="Birthplace"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/navy3"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/navy3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/S2Birthplace"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/navy2"
                    android:inputType="textMultiLine"
                    android:lines="10"
                    android:singleLine="false"
                    android:scrollbars="vertical"
                    android:gravity="start"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/navy2"
                android:elevation="0dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_gravity="start"
                    android:text="Birthdate"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnBirthDate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="35dp"
                    style="?android:spinnerStyle"
                    android:text="JAN 01 2020"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:onClick="opedDatePicker"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/navy2"
                android:elevation="0dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_gravity="start"
                    android:text="Select Civil Status"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spnrCivilStatus"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:textSize="20sp"
                    android:theme="@style/spinnerTheme"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/navy2"
                android:elevation="0dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_gravity="start"
                    android:text="Select Gender"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spnrGender"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:textSize="20sp"
                    android:theme="@style/spinnerTheme"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/navy2"
                android:elevation="0dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_gravity="start"
                    android:text="Select Purok"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
                <Spinner
                    android:id="@+id/spnrPurok"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:textSize="20sp"
                    android:theme="@style/spinnerTheme"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/navy2"
                android:elevation="0dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_gravity="start"
                    android:text="Select Voter Status"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
                <Spinner
                    android:id="@+id/spnrVoterStatus"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:textSize="20sp"
                    android:theme="@style/spinnerTheme"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/navy2"
                android:elevation="0dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_gravity="start"
                    android:text="Date of Registration"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnDateOfRegistration"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="35dp"
                    style="?android:spinnerStyle"
                    android:text="JAN 01 2020"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:onClick="opedDatePicker2"/>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout12S2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="Cedula No."
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/navy3"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/navy3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ETCedulaNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/navy2"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout22"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="Phone No."
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/navy3"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/navy3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ETContactNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/navy2"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnsignupS2"
            android:layout_marginTop="10dp"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/signup"
            app:cornerRadius="23dp"/>

    </LinearLayout>
</ScrollView>